--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -61,3 +61,11 @@ jobs:
           SSC_UPLOAD_TOKEN: ${{ secrets.SSC_UPLOAD_TOKEN }}
         with:
           cmd: '"${SC_CLIENT_CMD}" -url ${SC_CONTROLLER_URL} start -bt none -block -o -f result.fpr -upload -application "github_action" -version "test1" -uptoken ${SSC_UPLOAD_TOKEN}'
+
+      - name: Export SSC vulnerability data to GitHub
+        uses: fortify/github-action/ssc-export@v1
+        env:
+          SSC_URL: ${{secrets.SSC_URL}}
+          SSC_TOKEN: ${{secrets.SSC_TOKEN}}
+          SSC_APPVERSION: github_action:test1
+          # TOOL_DEFINITIONS: https://ftfy.mycompany.com/tool-definitions/v1/tool-definitions.yaml.zip
